# mood-tracer

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
backend/app/: dependecy.py  exceptions.py  main.py  settings.py
backend/app/handlers/: __init__.py  auth.py  redirect_to_docs.py  user.py
backend/app/handlers/test/: __init__.py
backend/app/infrastructure/cache/: README.md
backend/app/infrastructure/database/: README.md  accessor.py  create.sql  models.py
backend/app/models/: README.md
backend/app/repository/: README.md  User.py
backend/app/service/: user.py
